Revision history for perl distribution Convos

0.99_21 Not Released
 - Fix race condition when creating the websocket connection
 - Fix setting main dialog location on initial load
 - Fix not showing unread count for active channel
 - Fix parsing "/names" response #308
 - Add support for CONVOS_ORGANIZATION_URL #307
 - Add "get_user" websocket method

0.99_20 2016-12-29T21:00:43+0100
 - Fix will not reconnect without host/port change
 - Add "close" icon to main menu conversations

0.99_19 2016-12-06T14:43:43+0100
 - Fix loading message log after events have been received in background

0.99_18 2016-12-04T20:39:43+0100
 - Fix IRC username cannot contain special characters #296
 - Fix parsing IRC user modes dynamically #287
 - Fix "Goto anything" sorts by dialog name length
 - Fix queuing connections after connection errors
 - Fix API URL when mounting Convos inside on non-root reverse proxy config
 - Fix handling of new private messages #298
 - Add EXPERIMENTAL sort by last-read/activity
 - Add Dockerfile
 - Add "disable expanding links" setting in profile
 - Server messages can be read in frontend
 - Server settings can be edited in the "info" sidebar

0.99_17 2016-11-11T09:58:54+0200
 - Add support for editing on_connect_commands
 - Add support for JSON config - https://convos.by/doc/config.html#introduction

0.99_16 2016-11-08T13:37:58+0200
 - Fix getting historic messages, without duplicates #292
 - Fix getting messages from channel with "." in the name #293
 - Add custom styling for participants that are not currently in the channel
 - Add EXPERIMENTAL support for pluggable authentication #89
 - Add support for setting CONVOS_HOME from config file as "home" #289

0.99_15 2016-10-13T22:51:01+0200
 - Fix IRC join channel redirect #284
 - Fix parting IRC channel, even if not in the channel
 - Fix highlight color in chat
 - Fix keeping on_connect_commands
 - Improved keeping scroll position to bottom #269

0.99_14 2016-10-06T22:42:15+0200